login page, ei ole enam hardcoded bearerToken ja nupp, mis kustutab tasklisti ja genereerib uue

--- a/index.html
+++ b/index.html
@@ -7,11 +7,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo app</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.13/antd.min.css" rel="stylesheet" />
-    <link href="style.css" rel="stylesheet" />
-    <script src="main.js"></script>
+    <link href="index.css" rel="stylesheet" />
+    <script src="index.js"></script>
 </head>
 
 <body>
+    <div>
+        <button onclick="logout()">
+            LOGI VÄLJA
+        </button>
+        <button onclick="refreshTasks()">
+            TESTIMIS NUPP
+        
+        </button>
+    </div>
     <div type="flex" class="ant-row ant-row-center" style="min-height: 100vh; margin-top: 6rem;">
         <div class="ant-col ant-col-12">
 
