saab nüüd addida taske läbi api

--- a/index.html
+++ b/index.html
@@ -17,15 +17,14 @@
             LOGI VÄLJA
         </button>
         <button onclick="refreshTasks()">
-            TESTIMIS NUPP
-        
+            TASK LISTI REFRESHIMIS NUPP
         </button>
     </div>
     <div type="flex" class="ant-row ant-row-center" style="min-height: 100vh; margin-top: 6rem;">
         <div class="ant-col ant-col-12">
 
             <h1>Task List</h1>
-            <button id="add-task" type="button" class="ant-btn ant-btn-default">Add Task</button>
+            <button id="add-task" type="button" class="ant-btn ant-btn-default" onclick="addTask()">Add Task</button>
             <div class="ant-divider ant-divider-horizontal" role="separator"></div>
 
             <div class="ant-list ant-list-sm ant-list-split ant-list-bordered">
