Saab kustutada taske

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     </div>
                 </div>
 
-                <button class="delete-task" type="button" class="ant-btn ant-btn-text">
+                <button class="delete-task" type="button" class="ant-btn ant-btn-text" onclick="deleteTask(this)">
                     <span role="img" aria-label="delete" class="anticon anticon-delete">
                         <svg viewBox="64 64 896 896" focusable="false" data-icon="delete" width="1em" height="1em"
                             fill="currentColor" aria-hidden="true">
