--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <div class="ant-space-item">
                         <label class="ant-checkbox-wrapper">
                             <span class="ant-checkbox">
-                                <input name="completed" type="checkbox" class="ant-checkbox-input" value="">
+                                <input name="completed" type="checkbox" class="ant-checkbox-input" value="" onchange="markDone(this)">
                                 <span class="ant-checkbox-inner"></span>
                             </span>
                         </label>
